<resources>
    <string name="app_name">Intelliwiz 2.0</string>
    <string name="company_name">Youtility Technologies Pvt Ltd.</string>
    <string name="login_credential_error">Please enter proper credentials</string>
    <string name="login_failed">Log in failed.</string>
    <string name="login_capability_failed">User login succeed. User do not have mobile access permission.</string>
    <string name="login_user_code_error">Enter user code</string>
    <string name="login_user_password_error">Enter user password</string>
    <string name="login_user_sitecode_error">Enter site code</string>
    <string name="login_sitename_hint">SITE CODE</string>
    <string name="login_username_hint">Username</string>
    <string name="login_userpassword_hint">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="application_update_alert_msg">New version of Youtility2.0 available. Do you want to update it?</string>
    <string name="ngentry_firstname_hint">First</string>
    <string name="ngentry_middlename_hint">Middle</string>
    <string name="ngentry_lastname_hint">Last</string>
    <string name="ngentry_laddress_hint">Local Address</string>
    <string name="ngentry_naddress_hint">Native Address</string>
    <string name="ngentry_areacode_hint">Area Code</string>
    <string name="ngentry_mobilenumber_hint">Mobile Number</string>
    <string name="ngentry_otherqualification_hint">Other</string>
    <string name="ngentry_height_hint">Height in cm</string>
    <string name="ngentry_weight_hint">Weight in kg</string>
    <string name="ngentry_waist_hint">Waist in cm</string>
    <string name="ngentry_currentemployment_hint">Current Employment</string>
    <string name="ngentry_lengthofservice_hint">Length of service</string>
    <string name="ngentry_calculatedAge_hint">Age : %1$s</string>
    <string name="ngentry_identificationmark_hint">Identification Mark</string>
    <string name="ngentry_religion_hint">Religion</string>
    <string name="ngentry_cast_hint">Caste</string>
    <string name="ngentry_physicalcondition_hint">Physical Condition</string>
    <string name="ngentry_handicapped_hint">Handicapped</string>
    <string name="ngentry_lcity_hint">Local City</string>
    <string name="ngentry_lstate_hint">Local State</string>
    <string name="ngentry_ncity_hint">Native City</string>
    <string name="ngentry_nstate_hint">Native State</string>
    <string name="ngentry_nareacode_hint">Area Code</string>
    <string name="ngentry_seletdate">Select date</string>
    <string name="ngentry_error_referedname">Enter referred name</string>
    <string name="ngentry_error_fname">Enter first name</string>
    <string name="ngentry_error_lname">Enter last name</string>
    <string name="ngentry_error_mobilenumber">Enter mobile number</string>
    <string name="ngentry_error_dob">Date of birth is required.</string>
    <string name="ngentry_error_religion">Please enter religion</string>
    <string name="ngentry_error_cast">Please enter caste</string>
    <string name="ngentry_error_idmark">Enter identification mark</string>
    <string name="ngentry_error_height">Enter height in cm</string>
    <string name="ngentry_error_weight">Enter weight in kg</string>
    <string name="ngentry_error_waist">Enter waist in cm</string>
    <string name="ngentry_error_phycondition">Please enter physical condition</string>
    <string name="ngentry_added_successfully_msg">Employee reference added successfully</string>
    <string name="guardtour">Guard Tour</string>
    <string name="siteaudit">Site Audit</string>
    <string name="intelliwiz">Intelliwiz</string>
    <string name="attendance">Attendance</string>
    <string name="inventory">Inventory</string>
    <string name="ereg">e-Register</string>
    <string-array name="appName_array">
        <item>@string/guardtour</item>
        <item>@string/siteaudit</item>
        <item>@string/intelliwiz</item>
        <item>@string/attendance</item>
        <item>@string/inventory</item>
        <item>@string/ereg</item>
    </string-array>
    <string-array name="application_modules_array">
        <item>@string/module_task</item>
        <item>@string/module_ticket</item>
        <item>@string/module_asset</item>
        <item>@string/module_ir</item>
        <item>@string/module_panic</item>
        <item>@string/module_chkpoint</item>
        <item>@string/module_userlocation</item>
        <item>@string/module_selfattendance</item>
        <item>@string/module_siteattendance</item>
        <item>@string/module_takeattendance</item>
        <item>@string/module_sitetour</item>
        <item>@string/module_sitevisited</item>
        <item>@string/module_addconveyance</item>
        <item>@string/module_ppm</item>
        <item>@string/module_empreference</item>
        <item>@string/module_workflow</item>
        <item>@string/module_assetaudit</item>
        <item>@string/module_request</item>
        <item>@string/module_aoattendance</item>
        <item>@string/module_bmattendance</item>

    </string-array>
    <string name="module_task">TASK</string>
    <string name="module_ticket">TICKET</string>
    <string name="module_asset">ASSET</string>
    <string name="module_ir">INCIDENT REPORT</string>
    <string name="module_chkpoint">CHECK POINT</string>
    <string name="module_sitetour">SITE TOUR</string>
    <string name="module_userlocation">USER LOCATION</string>
    <string name="module_addconveyance">CONVEYANCE</string>
    <string name="module_selfattendance">SELF ATTENDANCE</string>
    <string name="module_siteattendance">SITE ATTENDANCE</string>
    <string name="module_takeattendance">TAKE ATTENDANCE</string>
    <string name="module_sitevisited">SITE LOG</string>
    <string name="module_ppm">PPM PLANNER</string>
    <string name="module_empreference">EMP REFERENCE</string>
    <string name="module_panic">PANIC</string>
    <string name="module_workflow">WORKFLOW</string>
    <string name="module_assetaudit">ASSET AUDIT</string>
    <string name="module_aoattendance">AREA MANAGER</string>
    <string name="module_bmattendance">BRANCH MANAGER</string>
    <string name="module_request">REQUEST</string>
    <string-array name="application_modules_code_array">
        <item>@string/module_task_code</item>
        <item>@string/module_ticket_code</item>
        <item>@string/module_asset_code</item>
        <item>@string/module_ir_code</item>
        <item>@string/module_panic_code</item>
        <item>@string/module_chkpoint_code</item>
        <item>@string/module_userlocation_code</item>
        <item>@string/module_selfattendance_code</item>
        <item>@string/module_siteattendance_code</item>
        <item>@string/module_takeattendance_code</item>
        <item>@string/module_sitetour_code</item>
        <item>@string/module_sitevisited_code</item>
        <item>@string/module_addconveyance_code</item>
        <item>@string/module_ppm_code</item>
        <item>@string/module_empreference_code</item>
        <item>@string/module_workflow_code</item>
        <item>@string/module_assetaudit_code</item>
        <item>@string/module_request_code</item>
        <item>@string/module_aoattendance_code</item>
        <item>@string/module_bmattendance_code</item>
    </string-array>
    <string name="module_task_code">TASK</string>
    <string name="module_ticket_code">TICKET</string>
    <string name="module_asset_code">ASSET</string>
    <string name="module_ir_code">INCIDENTREPORT</string>
    <string name="module_chkpoint_code">CHECKPOINT</string>
    <string name="module_sitetour_code">SITETOUR</string>
    <string name="module_userlocation_code">USERLOCATION</string>
    <string name="module_addconveyance_code">CONVEYANCE</string>
    <string name="module_selfattendance_code">SELFATTENDANCE</string>
    <string name="module_siteattendance_code">SITEATTENDANCE</string>
    <string name="module_takeattendance_code">TAKEATTENDANCE</string>
    <string name="module_panic_code">PANIC</string>
    <string name="module_sitevisited_code">SITEVISITLOG</string>
    <string name="module_ppm_code">PPMPLANNER</string>
    <string name="module_empreference_code">EMPLOYEEREFERENCE</string>
    <string name="module_workflow_code">WORKFLOW</string>
    <string name="module_assetaudit_code">ASSETAUDIT</string>
    <string name="module_aoattendance_code">AREAOFFICER</string>
    <string name="module_bmattendance_code">BRANCHMANAGER</string>
    <string name="module_request_code">REQUEST</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_notvisitedsites">Not Visited</string>
    <string name="action_visitedsites">Visited</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_adhoc">Adhoc</string>
    <string name="action_date">Date</string>
    <string name="action_priority">Priority</string>
    <string name="action_audio">Audio</string>
    <string name="action_video">Video</string>
    <string name="action_picture">Picture</string>
    <string name="navigation_drawer_setting">Setting</string>
    <string name="navigation_drawer_soslog" translatable="false">Panic Log</string>
    <string name="navigation_drawer_geofence">Geofence</string>
    <string name="navigation_drawer_help">Change Password</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="navigation_drawer_aboutus">About Us</string>
    <string name="navigation_drawer_privacypolicy">Privacy Policy</string>
    <string name="pref_title_lang_type">Language</string>
    <string name="pref_title_video_rec">Video Recording Length</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_location_tracking_frequency">Location tracking frequency</string>
    <string name="pref_title_activity_recognition_frequency">Activity recognition frequency</string>
    <string name="pref_title_alert_type">Alert Type</string>
    <string name="pref_origin_point_title">Enter Origin Point</string>
    <string name="pref_captcha_title">Buzzer Type</string>
    <string name="pref_title_display_name">Logged in user name</string>
    <string name="pref_title_site_name">Logged in user default site</string>
    <string name="pref_title_device_imei">Device IMEI</string>
    <string name="pref_title_contact_number">Emergency contact number</string>
    <string name="pref_title_contact_email">Emergency contact email id</string>
    <string name="pref_title_contact_msg">Emergency help message</string>
    <string name="aboutus_dbversion">DB Version: %1$d</string>
    <string name="aboutus_osversion">Android OS Version: %1$s</string>
    <string name="aboutus_appversion">App Version: %1$s</string>
    <string name="aboutus_support">Support:</string>
    <string name="aboutus_supportmsg">Our helpline is always open to receive any inquiry or feedback. Please feel free to drop us an email from the form and we will get back to you as soon as we can.</string>
    <string name="aboutus_supportemail">support@youtility.in</string>
    <string name="aboutus_visitus">Visit us:</string>
    <string name="aboutus_visitusurl">http://www.youtility.in</string>
    <string name="aboutus_contactus">Contact Us</string>
    <string name="joblist_pending_title">Pending</string>
    <string name="joblist_completed_title">Completed</string>
    <string name="joblist_all_title">All</string>
    <string name="adhoc_search">Search</string>
    <string name="adhoc_info">Info</string>
    <string name="data_not_found">Data not available</string>
</resources>