<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_pending"
        android:icon="@drawable/round_query_builder_black_18"
        android:title="@string/joblist_pending_title"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/navigation_complated"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/joblist_completed_title"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_all"
        android:icon="@drawable/round_done_all_black_18"
        android:title="@string/joblist_all_title"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_adhoc"
        android:icon="@drawable/ic_stat_adhoc"
        android:title="@string/action_adhoc"
        app:showAsAction="always|withText"/>

</menu>
