<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/taskSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/adhoc_search"
        android:visible="true"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_graph"
        android:title="@string/adhoc_info"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_scheduleList"
        android:orderInCategory="100"
        android:title="@string/action_schedule"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adhocList"
        android:orderInCategory="100"
        android:title="@string/action_adhoc"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="never" />
</menu>
