<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_audio"
        android:orderInCategory="100"
        android:title="@string/action_audio"
        android:icon="@drawable/ic_menu_audio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:title="@string/action_video"
        android:icon="@drawable/ic_menu_video"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_picture"
        android:orderInCategory="100"
        android:title="@string/action_picture"
        android:icon="@drawable/ic_menu_picture"
        app:showAsAction="ifRoom" />
</menu>
