<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ticketSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/adhoc_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_datewise"
        android:orderInCategory="100"
        android:title="@string/action_date"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_prioritywise"
        android:orderInCategory="100"
        android:title="@string/action_priority"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
