<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notvisitedsites"
        android:orderInCategory="100"
        android:icon="@drawable/dashboard_site_not_visigited"
        android:title="@string/action_notvisitedsites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_visitedsites"
        android:orderInCategory="100"
        android:icon="@drawable/dashboard_site_visited"
        android:title="@string/action_visitedsites"
        app:showAsAction="ifRoom" />

</menu>
