<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_alert_type_titles"
        android:entryValues="@array/pref_alert_type_values"
        android:key="alert_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_alert_type"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_captcha_type_titles"
        android:entryValues="@array/pref_captcha_type_values"
        android:key="captcha_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_captcha_title"/>
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="origin_point"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_origin_point_title"/>

</PreferenceScreen>
