<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="10"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_location_tracking_titles"
        android:entryValues="@array/pref_location_tracking_values"
        android:key="location_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_location_tracking_frequency"/>

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/pref_activity_recognition_titles"
        android:entryValues="@array/pref_activity_recognition_values"
        android:key="activityrecognition_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_activity_recognition_frequency"/>

    <ListPreference
        android:defaultValue="10000"
        android:entries="@array/pref_video_length_titles"
        android:entryValues="@array/pref_video_length_values"
        android:key="videorecording_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_video_rec"/>

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS"/>
    </Preference>-->

</PreferenceScreen>
