<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/web_screen_background"
    tools:context="com.youtility.intelliwiz20.Activities.AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fullscreen_content"
        android:layout_margin="@dimen/activity_10_margin"
        android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:src="@drawable/youtility"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_10_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="@color/screen_header_text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_appversion"
                    android:id="@+id/appVersion"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/screen_header_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_10_margin"
                android:background="@drawable/rounded_border_white_solid"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_dbversion"
                    android:id="@+id/dbVersion"
                    android:gravity="start"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_osversion"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:id="@+id/androidVersion"
                    android:gravity="start"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border_white_solid"
                android:layout_margin="@dimen/activity_10_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_support"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_supportmsg"
                    android:gravity="start"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feedbackform"
                    android:text="@string/aboutus_supportemail"
                    android:gravity="start"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@android:color/holo_purple"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border_white_solid"
                android:layout_margin="@dimen/activity_10_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_visitus"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/companyURL"
                    android:text="@string/aboutus_visitusurl"
                    android:layout_margin="@dimen/text_margin5dp"
                    android:gravity="start"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/contactus_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aboutus_contactus" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
